--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-antd": "^0.5.1",
+    "babel-plugin-import": "^1.3.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -45,7 +46,8 @@
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-redux": "^5.0.5",
-    "react-router": "^4.1.2",
+    "react-router": "^3.0.5",
+    "react-router-dom": "^4.1.2",
     "react-router-loader": "^0.5.4",
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
@@ -58,5 +60,9 @@
     "webpack": "^3.3.0",
     "webpack-dashboard": "^0.4.0",
     "webpack-dev-server": "^2.6.1"
+  },
+  "dependencies": {
+    "precss": "^2.0.0",
+    "react-datetime": "^2.9.0"
   }
 }
