--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline --hot --progress",
+    "start": "webpack-dev-server --inline --hot --progress --content-base . --history-api-fallback",
     "build": "webpack --progress --color"
   },
   "repository": {
@@ -29,7 +29,9 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-runtime": "^6.25.0",
     "css-loader": "^0.28.4",
     "es6-promise": "^4.1.1",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -53,6 +55,7 @@
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "store": "^2.0.12",
     "style-loader": "^0.18.2",
     "transform-runtime": "0.0.0",
