--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "postcss-loader": "^2.0.6",
     "query-string": "^5.0.0",
     "react": "^15.6.1",
@@ -65,7 +66,9 @@
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "precss": "^2.0.0",
+    "react-avatar-editor": "^10.2.1",
     "react-datetime": "^2.9.0"
   }
 }
